# grghs

./: .env.example  .gitignore  README.md  pyproject.toml
src/seedleak/: __init__.py  cli.py  env.py  github_client.py  pipeline.py
src/seedleak/collectors/: __init__.py  git_history.py  github_search.py  local.py  queries.py
src/seedleak/detector/: __init__.py  bip39.py  denylist.py
src/seedleak/liveness/: __init__.py  assess.py  balances.py  chains.py  derive.py
src/seedleak/notify/: __init__.py  github_issue.py  templates.py
src/seedleak/storage/: __init__.py  db.py  fingerprint.py  vault.py
tests/: test_bip39.py  test_git_history.py  test_liveness.py  test_notify.py  test_queries.py  test_storage.py  test_vault.py
