[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedleak"
version = "0.1.0"
description = "Detect exposed BIP39 seed phrases in public data and notify repository owners"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "seed-leak-alert" }]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "bip-utils>=2.9",
]

[project.optional-dependencies]
github = ["httpx>=0.27"]
liveness = ["bip-utils>=2.9", "httpx>=0.27"]
dev = ["pytest>=8.0", "httpx>=0.27", "bip-utils>=2.9"]

[project.scripts]
seedleak = "seedleak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seedleak = ["py.typed", "data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
